--- a/src/app/user-auth/header/header.component.html
+++ b/src/app/user-auth/header/header.component.html
@@ -1,5 +1,5 @@
  <header [ngClass]="headerClass" [ngStyle]="{ 'background': 'linear-gradient(rgba(0, 0, 0,0.7),rgba(0, 0, 0, 0.7)),
- url('+headerText.bgurl+') no-repeat'}" id="home">
+ url('+headerText.bgurl+') no-repeat top center fixed'}" id="home">
   <div class="container">
       <div class="col-md-12" >
        <app-header-navbar> </app-header-navbar>
