--- a/src/app/user-auth/landing-page/content-display/content-display.component.html
+++ b/src/app/user-auth/landing-page/content-display/content-display.component.html
@@ -3,6 +3,13 @@
     <div class="section-header">
       <h1 class="section-title wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">{{contentTitle}}</h1>
       <h2 class="section-subtitle wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="400ms">{{contentText}}</h2>
+      <div class="links-container">
+            
+          <a [routerLink]="['/services']" title="View our services" class="link link--dark"><b>View our services</b></a>
+      
+          <a [routerLink]="['/our-work']" title="View our work" class="link link--dark"><b>View our work</b></a>
+      
+      </div>
     </div>
   </div>
 </section>
