--- a/src/app/user-auth/header-navbar/header-navbar.component.css
+++ b/src/app/user-auth/header-navbar/header-navbar.component.css
@@ -1,1 +1,13 @@
+.logo-menu {
+    width: 40px;
+    height: 3px;
+    background-color: black;
+    margin: 2px 0;
+}
+.logo-menu-p {
+    margin: 0px 1px;
+}
 
+#logo-right:hover{
+    color: yellow;
+}
