--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,6 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:700,400,100);
+
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: DINNextLTPro-Light,sans-serif;
   color: #666;
   font-size: 14px;
   font-weight: 400;
@@ -44,7 +45,7 @@ a:focus {
   font-size: 30px;
   text-transform: uppercase;
   margin-top: 0px;
-  font-family: monospace;
+  font-family: DINNextLTPro-Light,sans-serif;
   color: black;
 }
 .section-header .section-subtitle {
@@ -82,8 +83,11 @@ a:focus {
   -webkit-animation-name: fadeInDown;
   animation-name: fadeInDown;
   padding: 0!important;
-  background: #3f51b5 !important;
 }
+
+/* .affix a i {
+  color:red;
+} */
 .sticky-navigation .row {
   padding: 0;
 }
@@ -115,8 +119,9 @@ a:focus {
 .navbar .navbar-nav li {
   float: none;
 }
+
 .navbar .navbar-nav li a {
-  font-family: 'Roboto', sans-serif;
+  font-family: DINNextLTPro-Light,sans-serif;
   display: block;
   font-size: 14px;
   padding: 15px 20px;
@@ -241,8 +246,8 @@ a:focus {
 }
 .hero-area .contents h1 {
   font-size: 50px;
-  font-weight: 100;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-weight: 400;
+  font-family: DINNextLTPro-Black,sans-serif;
 }
 .hero-area .contents p {
   font-size: 30px;
@@ -257,7 +262,8 @@ a:focus {
     padding: 170px 0;
   }
   .hero-area h1 {
-    font-size: 60px !important;
+    font-size: 9rem !important;
+    font-weight: 400;
   }
 }
 #features {
